Proyecto2/Gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PUSH

Grammar

Rule 0     S' -> init
Rule 1     init -> clases_funciones
Rule 2     clases_funciones -> clases_funciones clase_funcion
Rule 3     clases_funciones -> clase_funcion
Rule 4     clase_funcion -> clase
Rule 5     clase_funcion -> funcion
Rule 6     clase_funcion -> error LLADER
Rule 7     clase -> STRUCT ID LLAIZQ lista_parametros LLADER
Rule 8     clase -> STRUCT ID LLAIZQ LLADER
Rule 9     funcion -> FN ID PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
Rule 10    funcion -> FN ID PIZQ lista_parametros PDER bloque
Rule 11    funcion -> FN ID PIZQ PDER bloque
Rule 12    funcion -> MOD ID bloque2
Rule 13    funcion -> PUB MOD ID PIZQ PDER bloque
Rule 14    funcion -> PUB FN ID PIZQ PDER bloque
Rule 15    lista_parametros -> lista_parametros COMA parametroo
Rule 16    lista_parametros -> parametroo
Rule 17    parametroo -> ID DOBLEPT tipo
Rule 18    bloque2 -> bloque2 bloque
Rule 19    bloque2 -> bloque
Rule 20    bloque -> LLAIZQ instrucciones LLADER
Rule 21    bloque -> LLAIZQ clases_funciones LLADER
Rule 22    bloque -> LLAIZQ LLADER
Rule 23    instrucciones -> instrucciones instruccion
Rule 24    instrucciones -> instruccion
Rule 25    instruccion -> llamada PTCOMA
Rule 26    instruccion -> variables PTCOMA
Rule 27    instruccion -> declaracion_objeto PTCOMA
Rule 28    instruccion -> print_instruccion PTCOMA
Rule 29    instruccion -> return_instruccion PTCOMA
Rule 30    instruccion -> break_instruccion PTCOMA
Rule 31    instruccion -> continue_instruccion PTCOMA
Rule 32    instruccion -> if_instruccion
Rule 33    instruccion -> while_instruccion
Rule 34    instruccion -> for_instruccion
Rule 35    instruccion -> error PTCOMA
Rule 36    declaracion_objeto -> ID ID IGUAL instancia_objeto
Rule 37    instancia_objeto -> ID LLAIZQ lista_expresiones LLADER
Rule 38    instancia_objeto -> ID LLAIZQ LLADER
Rule 39    llamada -> ID PIZQ lista_expresiones PDER
Rule 40    llamada -> ID PIZQ PDER
Rule 41    return_instruccion -> RETURN expression
Rule 42    return_instruccion -> RETURN
Rule 43    break_instruccion -> BREAK
Rule 44    continue_instruccion -> CONTINUE
Rule 45    variables -> LET MUT ID DOBLEPT tipo IGUAL expression
Rule 46    variables -> LET ID DOBLEPT tipo IGUAL expression
Rule 47    variables -> LET MUT ID IGUAL expression
Rule 48    variables -> LET ID IGUAL expression
Rule 49    variables -> ID IGUAL expression
Rule 50    variables -> LET ID DOBLEPT CIZQ tipo PTCOMA ENTERO CDER IGUAL expression
Rule 51    variables -> LET MUT ID DOBLEPT VEC MENOR tipo MAYOR IGUAL VEC DOBLEPT DOBLEPT tamanioVector
Rule 52    variables -> LET MUT ID DOBLEPT VEC MENOR tipo MAYOR IGUAL VEC2 expression
Rule 53    tipo -> INT
Rule 54    tipo -> FLOAT
Rule 55    tipo -> STR1
Rule 56    tipo -> STR2
Rule 57    tipo -> BOOLEA
Rule 58    tipo -> CHAR
Rule 59    tamanioVector -> NEW PIZQ PDER
Rule 60    tamanioVector -> WITHCAPACITY PIZQ expression PDER
Rule 61    print_instruccion -> PRINT NOT PIZQ expression PDER
Rule 62    if_instruccion -> IF PIZQ expression PDER bloque
Rule 63    if_instruccion -> IF PIZQ expression PDER bloque ELSE bloque
Rule 64    if_instruccion -> IF PIZQ expression PDER bloque lista_else_if
Rule 65    if_instruccion -> IF PIZQ expression PDER bloque lista_else_if ELSE bloque
Rule 66    lista_else_if -> lista_else_if else_if
Rule 67    lista_else_if -> else_if
Rule 68    else_if -> ELSE IF PIZQ expression PDER bloque
Rule 69    while_instruccion -> WHILE expression bloque
Rule 70    for_instruccion -> FOR ID IN expression bloque
Rule 71    lista_expresiones -> lista_expresiones COMA expression
Rule 72    lista_expresiones -> expression
Rule 73    expression -> expression OR expression
Rule 74    expression -> expression AND expression
Rule 75    expression -> NOT expression
Rule 76    expression -> expression MENOR expression
Rule 77    expression -> expression MAYOR expression
Rule 78    expression -> expression MAYORIGUAL expression
Rule 79    expression -> expression MENORIGUAL expression
Rule 80    expression -> expression DIFERENTE expression
Rule 81    expression -> expression IGUALIGUAL expression
Rule 82    expression -> MENOS expression
Rule 83    expression -> expression MAS expression
Rule 84    expression -> expression MENOS expression
Rule 85    expression -> expression MULTIPLICACION expression
Rule 86    expression -> expression DIVISION expression
Rule 87    expression -> PIZQ expression PDER
Rule 88    expression -> expression MODULO expression
Rule 89    expression -> INT DOBLEPT DOBLEPT POW PIZQ expression COMA expression PDER
Rule 90    expression -> FLOAT DOBLEPT DOBLEPT POWF PIZQ expression COMA expression PDER
Rule 91    expression -> expression ABSO
Rule 92    expression -> expression TOSTRING PIZQ PDER
Rule 93    expression -> expression TOOWNED PIZQ PDER
Rule 94    expression -> expression SQRTT PIZQ
Rule 95    expression -> llamada
Rule 96    expression -> acceso_objeto_expresion
Rule 97    expression -> array_data
Rule 98    expression -> acceso_array_expresion
Rule 99    expression -> ENTERO
Rule 100   expression -> DECIMAL
Rule 101   expression -> ID
Rule 102   expression -> CADENA
Rule 103   expression -> CHAR
Rule 104   expression -> TRUE
Rule 105   expression -> FALSE
Rule 106   acceso_objeto_expresion -> acceso_objeto
Rule 107   acceso_objeto -> acceso_objeto PT expression
Rule 108   acceso_objeto -> expression
Rule 109   array_data -> CIZQ lista_expresiones CDER
Rule 110   acceso_array_expresion -> ID dimensiones
Rule 111   dimensiones -> dimensiones dimension
Rule 112   dimensiones -> dimension
Rule 113   dimension -> CIZQ expression CDER

Terminals, with rules where they appear

ABSO                 : 91
AND                  : 74
BOOLEA               : 57
BREAK                : 43
CADENA               : 102
CDER                 : 50 109 113
CHAR                 : 58 103
CIZQ                 : 50 109 113
COMA                 : 15 71 89 90
CONTINUE             : 44
DECIMAL              : 100
DIFERENTE            : 80
DIVISION             : 86
DOBLEPT              : 17 45 46 50 51 51 51 52 89 89 90 90
ELSE                 : 63 65 68
ENTERO               : 50 99
FALSE                : 105
FLOAT                : 54 90
FN                   : 9 10 11 14
FOR                  : 70
ID                   : 7 8 9 10 11 12 13 14 17 36 36 37 38 39 40 45 46 47 48 49 50 51 52 70 101 110
IF                   : 62 63 64 65 68
IGUAL                : 36 45 46 47 48 49 50 51 52
IGUALIGUAL           : 81
IN                   : 70
INT                  : 53 89
LET                  : 45 46 47 48 50 51 52
LLADER               : 6 7 8 20 21 22 37 38
LLAIZQ               : 7 8 20 21 22 37 38
MAS                  : 83
MAYOR                : 9 51 52 77
MAYORIGUAL           : 78
MENOR                : 51 52 76
MENORIGUAL           : 79
MENOS                : 9 82 84
MOD                  : 12 13
MODULO               : 88
MULTIPLICACION       : 85
MUT                  : 45 47 51 52
NEW                  : 59
NOT                  : 61 75
OR                   : 73
PDER                 : 9 10 11 13 14 39 40 59 60 61 62 63 64 65 68 87 89 90 92 93
PIZQ                 : 9 10 11 13 14 39 40 59 60 61 62 63 64 65 68 87 89 90 92 93 94
POW                  : 89
POWF                 : 90
PRINT                : 61
PT                   : 107
PTCOMA               : 25 26 27 28 29 30 31 35 50
PUB                  : 13 14
PUSH                 : 
RETURN               : 41 42
SQRTT                : 94
STR1                 : 55
STR2                 : 56
STRUCT               : 7 8
TOOWNED              : 93
TOSTRING             : 92
TRUE                 : 104
VEC                  : 51 51 52
VEC2                 : 52
WHILE                : 69
WITHCAPACITY         : 60
error                : 6 35

Nonterminals, with rules where they appear

acceso_array_expresion : 98
acceso_objeto        : 106 107
acceso_objeto_expresion : 96
array_data           : 97
bloque               : 9 10 11 13 14 18 19 62 63 63 64 65 65 68 69 70
bloque2              : 12 18
break_instruccion    : 30
clase                : 4
clase_funcion        : 2 3
clases_funciones     : 1 2 21
continue_instruccion : 31
declaracion_objeto   : 27
dimension            : 111 112
dimensiones          : 110 111
else_if              : 66 67
expression           : 41 45 46 47 48 49 50 52 60 61 62 63 64 65 68 69 70 71 72 73 73 74 74 75 76 76 77 77 78 78 79 79 80 80 81 81 82 83 83 84 84 85 85 86 86 87 88 88 89 89 90 90 91 92 93 94 107 108 113
for_instruccion      : 34
funcion              : 5
if_instruccion       : 32
init                 : 0
instancia_objeto     : 36
instruccion          : 23 24
instrucciones        : 20 23
lista_else_if        : 64 65 66
lista_expresiones    : 37 39 71 109
lista_parametros     : 7 9 10 15
llamada              : 25 95
parametroo           : 15 16
print_instruccion    : 28
return_instruccion   : 29
tamanioVector        : 51
tipo                 : 9 17 45 46 50 51 52
variables            : 26
while_instruccion    : 33

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . clases_funciones
    (2) clases_funciones -> . clases_funciones clase_funcion
    (3) clases_funciones -> . clase_funcion
    (4) clase_funcion -> . clase
    (5) clase_funcion -> . funcion
    (6) clase_funcion -> . error LLADER
    (7) clase -> . STRUCT ID LLAIZQ lista_parametros LLADER
    (8) clase -> . STRUCT ID LLAIZQ LLADER
    (9) funcion -> . FN ID PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> . FN ID PIZQ lista_parametros PDER bloque
    (11) funcion -> . FN ID PIZQ PDER bloque
    (12) funcion -> . MOD ID bloque2
    (13) funcion -> . PUB MOD ID PIZQ PDER bloque
    (14) funcion -> . PUB FN ID PIZQ PDER bloque

    error           shift and go to state 6
    STRUCT          shift and go to state 7
    FN              shift and go to state 8
    MOD             shift and go to state 9
    PUB             shift and go to state 10

    init                           shift and go to state 1
    clases_funciones               shift and go to state 2
    clase_funcion                  shift and go to state 3
    clase                          shift and go to state 4
    funcion                        shift and go to state 5

state 1

    (0) S' -> init .



state 2

    (1) init -> clases_funciones .
    (2) clases_funciones -> clases_funciones . clase_funcion
    (4) clase_funcion -> . clase
    (5) clase_funcion -> . funcion
    (6) clase_funcion -> . error LLADER
    (7) clase -> . STRUCT ID LLAIZQ lista_parametros LLADER
    (8) clase -> . STRUCT ID LLAIZQ LLADER
    (9) funcion -> . FN ID PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> . FN ID PIZQ lista_parametros PDER bloque
    (11) funcion -> . FN ID PIZQ PDER bloque
    (12) funcion -> . MOD ID bloque2
    (13) funcion -> . PUB MOD ID PIZQ PDER bloque
    (14) funcion -> . PUB FN ID PIZQ PDER bloque

    $end            reduce using rule 1 (init -> clases_funciones .)
    error           shift and go to state 6
    STRUCT          shift and go to state 7
    FN              shift and go to state 8
    MOD             shift and go to state 9
    PUB             shift and go to state 10

    clase_funcion                  shift and go to state 11
    clase                          shift and go to state 4
    funcion                        shift and go to state 5

state 3

    (3) clases_funciones -> clase_funcion .

    error           reduce using rule 3 (clases_funciones -> clase_funcion .)
    STRUCT          reduce using rule 3 (clases_funciones -> clase_funcion .)
    FN              reduce using rule 3 (clases_funciones -> clase_funcion .)
    MOD             reduce using rule 3 (clases_funciones -> clase_funcion .)
    PUB             reduce using rule 3 (clases_funciones -> clase_funcion .)
    $end            reduce using rule 3 (clases_funciones -> clase_funcion .)
    LLADER          reduce using rule 3 (clases_funciones -> clase_funcion .)


state 4

    (4) clase_funcion -> clase .

    error           reduce using rule 4 (clase_funcion -> clase .)
    STRUCT          reduce using rule 4 (clase_funcion -> clase .)
    FN              reduce using rule 4 (clase_funcion -> clase .)
    MOD             reduce using rule 4 (clase_funcion -> clase .)
    PUB             reduce using rule 4 (clase_funcion -> clase .)
    $end            reduce using rule 4 (clase_funcion -> clase .)
    LLADER          reduce using rule 4 (clase_funcion -> clase .)


state 5

    (5) clase_funcion -> funcion .

    error           reduce using rule 5 (clase_funcion -> funcion .)
    STRUCT          reduce using rule 5 (clase_funcion -> funcion .)
    FN              reduce using rule 5 (clase_funcion -> funcion .)
    MOD             reduce using rule 5 (clase_funcion -> funcion .)
    PUB             reduce using rule 5 (clase_funcion -> funcion .)
    $end            reduce using rule 5 (clase_funcion -> funcion .)
    LLADER          reduce using rule 5 (clase_funcion -> funcion .)


state 6

    (6) clase_funcion -> error . LLADER

    LLADER          shift and go to state 12


state 7

    (7) clase -> STRUCT . ID LLAIZQ lista_parametros LLADER
    (8) clase -> STRUCT . ID LLAIZQ LLADER

    ID              shift and go to state 13


state 8

    (9) funcion -> FN . ID PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> FN . ID PIZQ lista_parametros PDER bloque
    (11) funcion -> FN . ID PIZQ PDER bloque

    ID              shift and go to state 14


state 9

    (12) funcion -> MOD . ID bloque2

    ID              shift and go to state 15


state 10

    (13) funcion -> PUB . MOD ID PIZQ PDER bloque
    (14) funcion -> PUB . FN ID PIZQ PDER bloque

    MOD             shift and go to state 16
    FN              shift and go to state 17


state 11

    (2) clases_funciones -> clases_funciones clase_funcion .

    error           reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)
    STRUCT          reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)
    FN              reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)
    MOD             reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)
    PUB             reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)
    $end            reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)
    LLADER          reduce using rule 2 (clases_funciones -> clases_funciones clase_funcion .)


state 12

    (6) clase_funcion -> error LLADER .

    error           reduce using rule 6 (clase_funcion -> error LLADER .)
    STRUCT          reduce using rule 6 (clase_funcion -> error LLADER .)
    FN              reduce using rule 6 (clase_funcion -> error LLADER .)
    MOD             reduce using rule 6 (clase_funcion -> error LLADER .)
    PUB             reduce using rule 6 (clase_funcion -> error LLADER .)
    $end            reduce using rule 6 (clase_funcion -> error LLADER .)
    LLADER          reduce using rule 6 (clase_funcion -> error LLADER .)


state 13

    (7) clase -> STRUCT ID . LLAIZQ lista_parametros LLADER
    (8) clase -> STRUCT ID . LLAIZQ LLADER

    LLAIZQ          shift and go to state 18


state 14

    (9) funcion -> FN ID . PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> FN ID . PIZQ lista_parametros PDER bloque
    (11) funcion -> FN ID . PIZQ PDER bloque

    PIZQ            shift and go to state 19


state 15

    (12) funcion -> MOD ID . bloque2
    (18) bloque2 -> . bloque2 bloque
    (19) bloque2 -> . bloque
    (20) bloque -> . LLAIZQ instrucciones LLADER
    (21) bloque -> . LLAIZQ clases_funciones LLADER
    (22) bloque -> . LLAIZQ LLADER

    LLAIZQ          shift and go to state 22

    bloque2                        shift and go to state 20
    bloque                         shift and go to state 21

state 16

    (13) funcion -> PUB MOD . ID PIZQ PDER bloque

    ID              shift and go to state 23


state 17

    (14) funcion -> PUB FN . ID PIZQ PDER bloque

    ID              shift and go to state 24


state 18

    (7) clase -> STRUCT ID LLAIZQ . lista_parametros LLADER
    (8) clase -> STRUCT ID LLAIZQ . LLADER
    (15) lista_parametros -> . lista_parametros COMA parametroo
    (16) lista_parametros -> . parametroo
    (17) parametroo -> . ID DOBLEPT tipo

    LLADER          shift and go to state 27
    ID              shift and go to state 25

    lista_parametros               shift and go to state 26
    parametroo                     shift and go to state 28

state 19

    (9) funcion -> FN ID PIZQ . lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> FN ID PIZQ . lista_parametros PDER bloque
    (11) funcion -> FN ID PIZQ . PDER bloque
    (15) lista_parametros -> . lista_parametros COMA parametroo
    (16) lista_parametros -> . parametroo
    (17) parametroo -> . ID DOBLEPT tipo

    PDER            shift and go to state 30
    ID              shift and go to state 25

    lista_parametros               shift and go to state 29
    parametroo                     shift and go to state 28

state 20

    (12) funcion -> MOD ID bloque2 .
    (18) bloque2 -> bloque2 . bloque
    (20) bloque -> . LLAIZQ instrucciones LLADER
    (21) bloque -> . LLAIZQ clases_funciones LLADER
    (22) bloque -> . LLAIZQ LLADER

    error           reduce using rule 12 (funcion -> MOD ID bloque2 .)
    STRUCT          reduce using rule 12 (funcion -> MOD ID bloque2 .)
    FN              reduce using rule 12 (funcion -> MOD ID bloque2 .)
    MOD             reduce using rule 12 (funcion -> MOD ID bloque2 .)
    PUB             reduce using rule 12 (funcion -> MOD ID bloque2 .)
    $end            reduce using rule 12 (funcion -> MOD ID bloque2 .)
    LLADER          reduce using rule 12 (funcion -> MOD ID bloque2 .)
    LLAIZQ          shift and go to state 22

    bloque                         shift and go to state 31

state 21

    (19) bloque2 -> bloque .

    LLAIZQ          reduce using rule 19 (bloque2 -> bloque .)
    error           reduce using rule 19 (bloque2 -> bloque .)
    STRUCT          reduce using rule 19 (bloque2 -> bloque .)
    FN              reduce using rule 19 (bloque2 -> bloque .)
    MOD             reduce using rule 19 (bloque2 -> bloque .)
    PUB             reduce using rule 19 (bloque2 -> bloque .)
    $end            reduce using rule 19 (bloque2 -> bloque .)
    LLADER          reduce using rule 19 (bloque2 -> bloque .)


state 22

    (20) bloque -> LLAIZQ . instrucciones LLADER
    (21) bloque -> LLAIZQ . clases_funciones LLADER
    (22) bloque -> LLAIZQ . LLADER
    (23) instrucciones -> . instrucciones instruccion
    (24) instrucciones -> . instruccion
    (2) clases_funciones -> . clases_funciones clase_funcion
    (3) clases_funciones -> . clase_funcion
    (25) instruccion -> . llamada PTCOMA
    (26) instruccion -> . variables PTCOMA
    (27) instruccion -> . declaracion_objeto PTCOMA
    (28) instruccion -> . print_instruccion PTCOMA
    (29) instruccion -> . return_instruccion PTCOMA
    (30) instruccion -> . break_instruccion PTCOMA
    (31) instruccion -> . continue_instruccion PTCOMA
    (32) instruccion -> . if_instruccion
    (33) instruccion -> . while_instruccion
    (34) instruccion -> . for_instruccion
    (35) instruccion -> . error PTCOMA
    (4) clase_funcion -> . clase
    (5) clase_funcion -> . funcion
    (6) clase_funcion -> . error LLADER
    (39) llamada -> . ID PIZQ lista_expresiones PDER
    (40) llamada -> . ID PIZQ PDER
    (45) variables -> . LET MUT ID DOBLEPT tipo IGUAL expression
    (46) variables -> . LET ID DOBLEPT tipo IGUAL expression
    (47) variables -> . LET MUT ID IGUAL expression
    (48) variables -> . LET ID IGUAL expression
    (49) variables -> . ID IGUAL expression
    (50) variables -> . LET ID DOBLEPT CIZQ tipo PTCOMA ENTERO CDER IGUAL expression
    (51) variables -> . LET MUT ID DOBLEPT VEC MENOR tipo MAYOR IGUAL VEC DOBLEPT DOBLEPT tamanioVector
    (52) variables -> . LET MUT ID DOBLEPT VEC MENOR tipo MAYOR IGUAL VEC2 expression
    (36) declaracion_objeto -> . ID ID IGUAL instancia_objeto
    (61) print_instruccion -> . PRINT NOT PIZQ expression PDER
    (41) return_instruccion -> . RETURN expression
    (42) return_instruccion -> . RETURN
    (43) break_instruccion -> . BREAK
    (44) continue_instruccion -> . CONTINUE
    (62) if_instruccion -> . IF PIZQ expression PDER bloque
    (63) if_instruccion -> . IF PIZQ expression PDER bloque ELSE bloque
    (64) if_instruccion -> . IF PIZQ expression PDER bloque lista_else_if
    (65) if_instruccion -> . IF PIZQ expression PDER bloque lista_else_if ELSE bloque
    (69) while_instruccion -> . WHILE expression bloque
    (70) for_instruccion -> . FOR ID IN expression bloque
    (7) clase -> . STRUCT ID LLAIZQ lista_parametros LLADER
    (8) clase -> . STRUCT ID LLAIZQ LLADER
    (9) funcion -> . FN ID PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> . FN ID PIZQ lista_parametros PDER bloque
    (11) funcion -> . FN ID PIZQ PDER bloque
    (12) funcion -> . MOD ID bloque2
    (13) funcion -> . PUB MOD ID PIZQ PDER bloque
    (14) funcion -> . PUB FN ID PIZQ PDER bloque

    LLADER          shift and go to state 33
    error           shift and go to state 46
    ID              shift and go to state 47
    LET             shift and go to state 48
    PRINT           shift and go to state 49
    RETURN          shift and go to state 50
    BREAK           shift and go to state 51
    CONTINUE        shift and go to state 52
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    FOR             shift and go to state 55
    STRUCT          shift and go to state 7
    FN              shift and go to state 8
    MOD             shift and go to state 9
    PUB             shift and go to state 10

    instrucciones                  shift and go to state 32
    clases_funciones               shift and go to state 34
    instruccion                    shift and go to state 35
    clase_funcion                  shift and go to state 3
    llamada                        shift and go to state 36
    variables                      shift and go to state 37
    declaracion_objeto             shift and go to state 38
    print_instruccion              shift and go to state 39
    return_instruccion             shift and go to state 40
    break_instruccion              shift and go to state 41
    continue_instruccion           shift and go to state 42
    if_instruccion                 shift and go to state 43
    while_instruccion              shift and go to state 44
    for_instruccion                shift and go to state 45
    clase                          shift and go to state 4
    funcion                        shift and go to state 5

state 23

    (13) funcion -> PUB MOD ID . PIZQ PDER bloque

    PIZQ            shift and go to state 56


state 24

    (14) funcion -> PUB FN ID . PIZQ PDER bloque

    PIZQ            shift and go to state 57


state 25

    (17) parametroo -> ID . DOBLEPT tipo

    DOBLEPT         shift and go to state 58


state 26

    (7) clase -> STRUCT ID LLAIZQ lista_parametros . LLADER
    (15) lista_parametros -> lista_parametros . COMA parametroo

    LLADER          shift and go to state 59
    COMA            shift and go to state 60


state 27

    (8) clase -> STRUCT ID LLAIZQ LLADER .

    error           reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)
    STRUCT          reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)
    FN              reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)
    MOD             reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)
    PUB             reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)
    $end            reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)
    LLADER          reduce using rule 8 (clase -> STRUCT ID LLAIZQ LLADER .)


state 28

    (16) lista_parametros -> parametroo .

    LLADER          reduce using rule 16 (lista_parametros -> parametroo .)
    COMA            reduce using rule 16 (lista_parametros -> parametroo .)
    PDER            reduce using rule 16 (lista_parametros -> parametroo .)


state 29

    (9) funcion -> FN ID PIZQ lista_parametros . PDER MENOS MAYOR tipo bloque
    (10) funcion -> FN ID PIZQ lista_parametros . PDER bloque
    (15) lista_parametros -> lista_parametros . COMA parametroo

    PDER            shift and go to state 61
    COMA            shift and go to state 60


state 30

    (11) funcion -> FN ID PIZQ PDER . bloque
    (20) bloque -> . LLAIZQ instrucciones LLADER
    (21) bloque -> . LLAIZQ clases_funciones LLADER
    (22) bloque -> . LLAIZQ LLADER

    LLAIZQ          shift and go to state 22

    bloque                         shift and go to state 62

state 31

    (18) bloque2 -> bloque2 bloque .

    LLAIZQ          reduce using rule 18 (bloque2 -> bloque2 bloque .)
    error           reduce using rule 18 (bloque2 -> bloque2 bloque .)
    STRUCT          reduce using rule 18 (bloque2 -> bloque2 bloque .)
    FN              reduce using rule 18 (bloque2 -> bloque2 bloque .)
    MOD             reduce using rule 18 (bloque2 -> bloque2 bloque .)
    PUB             reduce using rule 18 (bloque2 -> bloque2 bloque .)
    $end            reduce using rule 18 (bloque2 -> bloque2 bloque .)
    LLADER          reduce using rule 18 (bloque2 -> bloque2 bloque .)


state 32

    (20) bloque -> LLAIZQ instrucciones . LLADER
    (23) instrucciones -> instrucciones . instruccion
    (25) instruccion -> . llamada PTCOMA
    (26) instruccion -> . variables PTCOMA
    (27) instruccion -> . declaracion_objeto PTCOMA
    (28) instruccion -> . print_instruccion PTCOMA
    (29) instruccion -> . return_instruccion PTCOMA
    (30) instruccion -> . break_instruccion PTCOMA
    (31) instruccion -> . continue_instruccion PTCOMA
    (32) instruccion -> . if_instruccion
    (33) instruccion -> . while_instruccion
    (34) instruccion -> . for_instruccion
    (35) instruccion -> . error PTCOMA
    (39) llamada -> . ID PIZQ lista_expresiones PDER
    (40) llamada -> . ID PIZQ PDER
    (45) variables -> . LET MUT ID DOBLEPT tipo IGUAL expression
    (46) variables -> . LET ID DOBLEPT tipo IGUAL expression
    (47) variables -> . LET MUT ID IGUAL expression
    (48) variables -> . LET ID IGUAL expression
    (49) variables -> . ID IGUAL expression
    (50) variables -> . LET ID DOBLEPT CIZQ tipo PTCOMA ENTERO CDER IGUAL expression
    (51) variables -> . LET MUT ID DOBLEPT VEC MENOR tipo MAYOR IGUAL VEC DOBLEPT DOBLEPT tamanioVector
    (52) variables -> . LET MUT ID DOBLEPT VEC MENOR tipo MAYOR IGUAL VEC2 expression
    (36) declaracion_objeto -> . ID ID IGUAL instancia_objeto
    (61) print_instruccion -> . PRINT NOT PIZQ expression PDER
    (41) return_instruccion -> . RETURN expression
    (42) return_instruccion -> . RETURN
    (43) break_instruccion -> . BREAK
    (44) continue_instruccion -> . CONTINUE
    (62) if_instruccion -> . IF PIZQ expression PDER bloque
    (63) if_instruccion -> . IF PIZQ expression PDER bloque ELSE bloque
    (64) if_instruccion -> . IF PIZQ expression PDER bloque lista_else_if
    (65) if_instruccion -> . IF PIZQ expression PDER bloque lista_else_if ELSE bloque
    (69) while_instruccion -> . WHILE expression bloque
    (70) for_instruccion -> . FOR ID IN expression bloque

    LLADER          shift and go to state 63
    error           shift and go to state 65
    ID              shift and go to state 47
    LET             shift and go to state 48
    PRINT           shift and go to state 49
    RETURN          shift and go to state 50
    BREAK           shift and go to state 51
    CONTINUE        shift and go to state 52
    IF              shift and go to state 53
    WHILE           shift and go to state 54
    FOR             shift and go to state 55

    instruccion                    shift and go to state 64
    llamada                        shift and go to state 36
    variables                      shift and go to state 37
    declaracion_objeto             shift and go to state 38
    print_instruccion              shift and go to state 39
    return_instruccion             shift and go to state 40
    break_instruccion              shift and go to state 41
    continue_instruccion           shift and go to state 42
    if_instruccion                 shift and go to state 43
    while_instruccion              shift and go to state 44
    for_instruccion                shift and go to state 45

state 33

    (22) bloque -> LLAIZQ LLADER .

    LLAIZQ          reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    error           reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    STRUCT          reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    FN              reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    MOD             reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    PUB             reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    $end            reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    LLADER          reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    ID              reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    LET             reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    PRINT           reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    RETURN          reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    BREAK           reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    CONTINUE        reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    IF              reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    WHILE           reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    FOR             reduce using rule 22 (bloque -> LLAIZQ LLADER .)
    ELSE            reduce using rule 22 (bloque -> LLAIZQ LLADER .)


state 34

    (21) bloque -> LLAIZQ clases_funciones . LLADER
    (2) clases_funciones -> clases_funciones . clase_funcion
    (4) clase_funcion -> . clase
    (5) clase_funcion -> . funcion
    (6) clase_funcion -> . error LLADER
    (7) clase -> . STRUCT ID LLAIZQ lista_parametros LLADER
    (8) clase -> . STRUCT ID LLAIZQ LLADER
    (9) funcion -> . FN ID PIZQ lista_parametros PDER MENOS MAYOR tipo bloque
    (10) funcion -> . FN ID PIZQ lista_parametros PDER bloque
    (11) funcion -> . FN ID PIZQ PDER bloque
    (12) funcion -> . MOD ID bloque2
    (13) funcion -> . PUB MOD ID PIZQ PDER bloque
    (14) funcion -> . PUB FN ID PIZQ PDER bloque

    LLADER          shift and go to state 66
    error           shift and go to state 6
    STRUCT          shift and go to state 7
    FN              shift and go to state 8
    MOD             shift and go to state 9
    PUB             shift and go to state 10

    clase_funcion                  shift and go to state 11
    clase                          shift and go to state 4
    funcion                        shift and go to state 5

state 35

    (24) instrucciones -> instruccion .

    LLADER          reduce using rule 24 (instrucciones -> instruccion .)
    error           reduce using rule 24 (instrucciones -> instruccion .)
    ID              reduce using rule 24 (instrucciones -> instruccion .)
    LET             reduce using rule 24 (instrucciones -> instruccion .)
    PRINT           reduce using rule 24 (instrucciones -> instruccion .)
    RETURN          reduce using rule 24 (instrucciones -> instruccion .)
    BREAK           reduce using rule 24 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 24 (instrucciones -> instruccion .)
    IF              reduce using rule 24 (instrucciones -> instruccion .)
    WHILE           reduce using rule 24 (instrucciones -> instruccion .)
    FOR             reduce using rule 24 (instrucciones -> instruccion .)


state 36

    (25) instruccion -> llamada . PTCOMA

    PTCOMA          shift and go to state 67


state 37

    (26) instruccion -> variables . PTCOMA

    PTCOMA          shift and go to state 68


state 38

    (27) instruccion -> declaracion_objeto . PTCOMA

    PTCOMA          shift and go to state 69


state 39

    (28) instruccion -> print_instruccion . PTCOMA

    PTCOMA          shift and go to state 70


state 40

    (29) instruccion -> return_instruccion . PTCOMA

    PTCOMA          shift and go to state 71


state 41

    (30) instruccion -> break_instruccion . PTCOMA

    PTCOMA          shift and go to state 72


state 42

    (31) instruccion -> continue_instruccion . PTCOMA

    PTCOMA          shift and go to state 73


state 43

    (32) instruccion -> if_instruccion .
